--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+body{
+	background-color :#f8f8f8 ;
+}
+.book-library{
+	Background-color : #ffffff; 
+	display : flex;
+	flex-direction : column;
+	justify-content : center;
+	align-items : center;
+	width : 98vw ;
+	margin : 10px;
+	border-radius : 10px;
+}
+.book{
+	margin-top : 1px
+	display : flex;
+	flex-direction : column;
+}
