--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /*  your css code here. If applicable */
 body{
-	background-color :#f8f8f8 ;
+/* 	background-color :#f8f8f8 ; */
 }
 .book-library{
-	Background-color : #ffffff; 
+/* 	Background-color : #ffffff;  */
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
@@ -13,7 +13,16 @@ body{
 	border-radius : 10px;
 }
 .book{
-	margin-top : 1px
+	background-color : #f8f8f8;
+	width : 100%;
+	margin-top : 20px;
 	display : flex;
 	flex-direction : column;
+	justify-content : center;
+	align-items : center;
+	gap : 10px;
+}
+.book img{
+	height : 200px;
+	margin-top : 20px;
 }
