--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ body{
 	margin : 10px;
 	border-radius : 10px;
 }
+.title{
+	background-color : #f8f8f8;
+	width : 100%;
+	text-align : center;
+}
 .book{
 	background-color : #f8f8f8;
 	width : 100%;
@@ -25,4 +30,11 @@ body{
 .book img{
 	height : 200px;
 	margin-top : 20px;
+}
+.info{
+	display : flex;
+	flex-direction : column ;
+	line-height: 0;
+	text-align : left;
+	justify-content : left;
 }
