--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 body{
-/* 	background-color :#f8f8f8 ; */
+	background-color :#f8f8f8 ;
 }
 .book-library{
 	Background-color : #ffffff; 
@@ -8,9 +8,10 @@ body{
 	flex-direction : column;
 	justify-content : center;
 	align-items : center;
-	width : 98vw ;
+	width : 50% ;
 	margin : 10px;
-	border-radius : 100px;
+	border : 0px solid black ;
+	box-shadow : 1px 1px 10px black ;
 }
 .title{
 	background-color : #f8f8f8;
