--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body{
 	align-items : center;
 	width : 50% ;
 	margin : 10px;
-	border : 0px solid black ;
 	box-shadow : 1px 1px 10px black ;
 }
 .title{
@@ -44,6 +43,8 @@ body{
 }
 .Aut{
 	color : #777777;
+	margin : 1px;
+	padding : 1px;
 }
 .Price{
 	background-color : #2ecc71; 
