--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
 	text-align : center;
 }
 .book{
-	background-color : #f8f8f8;
+	background-color : ;
 	width : 100%;
 	margin-top : 20px;
 	display : flex;
