--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
 	text-align : center;
 }
 .book{
-	background-color : ;
+	background-color : #f8f8f8;
 	width : 100%;
 	margin-top : 20px;
 	display : flex;
@@ -47,7 +47,7 @@ body{
 	padding : 1px;
 }
 .Price{
-	background-color : #2ecc71; 
+	background-color : rgb(46, 204, 113); 
 	width : 95%;
 	height : 30px;
 	display : flex ;
