--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 body{
-	background-color :#f8f8f8 ;
+/* 	background-color :#f8f8f8 ; */
 }
 .book-library{
 	Background-color : #ffffff; 
@@ -18,7 +18,7 @@ body{
 	text-align : center;
 }
 .book{
-	background-color : rgb(46, 204, 113);
+	background-color : #f8f8f8;
 	width : 100%;
 	margin-top : 20px;
 	display : flex;
