--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body{
 	padding : 1px;
 }
 .Price{
-	background-color : rgb(46, 204, 113); 
+	background-color : rgba(46, 204, 113,1); 
 	width : 95%;
 	height : 30px;
 	display : flex ;
