--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body{
 	padding : 1px;
 }
 .Price{
-	background-color : rgba(46, 204, 113,1); 
+	background-color : rgb(46,204,113); 
 	width : 95%;
 	height : 30px;
 	display : flex ;
@@ -57,5 +57,5 @@ body{
 	color : white;
 	font-size : 20px;
 	margin-bottom : 20px;
-	border-radius : 5px;
+/* 	border-radius : 5px; */
 }
