--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ body{
 	padding : 1px;
 }
 .Price{
-	background-color : rgb(46,204,113); 
-	width : 95%;
+	background-color : rgb(46, 204, 113 ); 
+	width : 97%;
 	height : 30px;
 	display : flex ;
 	justify-content : center ;
