--- a/styles.css
+++ b/styles.css
@@ -42,13 +42,13 @@ body{
 	text-align : left;
 	margin-left : 30px;
 }
-.Aut{
+.Autor{
 	color : #777777;
 	margin : 1px;
 	padding : 1px;
 }
 .Price{
-	background-color : rgb(46, 204, 113 ); 
+	background-color: rgb(46, 204, 113);
 	width : 97%;
 	height : 30px;
 	display : flex ;
@@ -57,5 +57,4 @@ body{
 	color : white;
 	font-size : 20px;
 	margin-bottom : 20px;
-/* 	border-radius : 5px; */
 }
