--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 /* 	background-color :#f8f8f8 ; */
 }
 .book-library{
-	Background-color : #ffffff; 
+	Background color : #ffffff; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
@@ -43,7 +43,7 @@ body{
 	margin-left : 30px;
 }
 .Autor{
-	color : #777777;
+	color : rgb(119, 119, 119);
 	margin : 1px;
 	padding : 1px;
 }
