--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,12 @@ body{
 	margin-left : 30px;
 }
 .Autor{
-	color : rgb(119, 119, 119);
+	color : #777777;
 	margin : 1px;
 	padding : 1px;
 }
 .Price{
-    background-color : rgb(46, 204, 113);
+    background-color : #2ecc71;
 	width : 97%;
 	height : 30px;
 	display : flex ;
