--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,12 @@ body{
 	margin-left : 30px;
 }
 .Autor{
-	color : #777777;
-	margin : 1px;
+	color : #777777 ;
+	margin : 1px ;
 	padding : 1px;
 }
 .Price{
-    background-color : #2ecc71;
+    background-color : green;
 	width : 97%;
 	height : 30px;
 	display : flex ;
