--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,27 @@
 /*  your css code here. If applicable */
 body{
-/* 	background-color :#f8f8f8 ; */
+	background-color :#f8f8f8 ;
 }
 .book-library{
-	Background color : #ffffff; 
+	Background color : black ; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
 	align-items : center;
-	width : 98% ;
-	margin : 10px;
-	margin-rigth : 20px;
+	flex-wrap : wrap ;
+	width : 95% ;
+	margin : 20px;
 	box-shadow : 1px 1px 10px black ;
+	border-radius: 10px;
+	overflow : hidden;
 }
 .title{
-	background-color : #f8f8f8;
+	background-color : rgb(240, 240, 240);
 	width : 100%;
 	text-align : center;
 }
 .book{
-	background-color : #f8f8f8;
+    background-color : rgb(240, 240, 240);
 	width : 100%;
 	margin-top : 20px;
 	display : flex;
@@ -34,10 +36,10 @@ body{
 	margin-top : 20px;
 }
 .info{
-	width : 100%;
+	width : 100% ;
 	display : flex ;
-	flex-direction : column;
-	justify-content : left;
+	flex-direction : column ;
+	justify-content : left ;
 	line-height : 0;
 	text-align : left;
 	margin-left : 30px;
