--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 	background-color :#f8f8f8 ;
 }
 .book-library{
-	Background color : black ; 
+	Background color : #ffffff ; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
