--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 	background-color :#f8f8f8 ;
 }
 .book-library{
-	Background color : #ffffff ; 
+	Background color : rgba(0, 0, 0, 0) ; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
@@ -50,7 +50,7 @@ body{
 	padding : 1px;
 }
 .price{
-    background-color : #2ecc71;
+    background-color : rgb(46, 204, 113);
 	width : 97%;
 	height : 30px;
 	display : flex ;
