--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 	background-color :#f8f8f8 ;
 }
 .book-library{
-	Background color : rgba(0, 0, 0, 0) ; 
+	Background color :rgb(255, 255, 255) ; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
