--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 	background-color :#f8f8f8 ;
 }
 .book-library{
-	Background color : rgb(255, 255, 255) ; 
+	Background color : #ffffff ; 
 	display : flex;
 	flex-direction : column;
 	justify-content : center;
@@ -21,7 +21,7 @@ body{
 	text-align : center;
 }
 .book{
-/*     background-color : rgb(240, 240, 240); */
+    Background-color : rgb(46, 204, 113) ; 
 	width : 100%;
 	margin-top : 20px;
 	display : flex;
