--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/*  your css code here. If applicable */
-body{
+/* /*  your css code here. If applicable */
+/* body{
 	background-color :#f8f8f8 ;
 }
 .book-library{
@@ -20,7 +20,7 @@ body{
 	width : 100%;
 	text-align : center;
 }
-.book{
+/*.book{
 /*     Background-color : rgb(240, 240, 240) ;  */
 	width : 100%;
 	margin-top : 20px;
@@ -31,12 +31,12 @@ body{
 	gap : 10px;
 	font-size : 15px;
 }
-.book img{
+/*.book img{
 	height : 230px;
 	margin-top : 20px;
-}
+}*/
 
-.info{
+/*.info{
 	width : 100% ;
 	display : flex ;
 	flex-direction : column ;
@@ -61,4 +61,20 @@ body{
 	font-size : 20px;
 	margin-bottom : 20px;
 	border-radius : 10px;
+} */
+
+body{
+	background-color: #f8f8f8;
+}
+.book-library{
+	display:flex;
+	flex-direction:column;
+}
+.author{
+	color: #777777;
+}
+.price{
+	border-radius: 5px;
+	color: rgb(255, 255, 255);
+	background-color: #2ecc71;
 }
